--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
+  "resolutions": {
+    "@types/react": "17.0.43"
+  },
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
