--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "17.0.43"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
     "expo-location": "~14.2.2",
